Added simple CRUD UI interfaces
