# docs/swagger.yaml
@@ -59,6 +59,8 @@ definitions:
         type: string
       maxCount:
         type: integer
+      owner:
+        type: string
       startTime:
         type: string
     type: object
@@ -165,8 +167,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Updates several fields of a short, while maintaining count, owner
-        and creation date
+      description: Updates several fields of a short, while maintaining count, owner and creation date
       operationId: update
       parameters:
       - description: short code
@@ -192,8 +193,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Return the right link for short code or "not found" if expired,
-        not started or max count was reached
+      description: Return the right link for short code or "not found" if expired, not started or max count was reached
       operationId: handle
       parameters:
       - description: short code
